# Parakeet-ASR-FastAPI

./: flake.nix
app/: pyproject.toml
